--- a/board-front/src/App.css
+++ b/board-front/src/App.css
@@ -3,6 +3,28 @@
     width: 100%;
 }
 
+.emphasis {
+    font-weight: bolder;
+}
+
+.word-badge {
+    padding: 6px 20px;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    border-radius: 30px;
+
+    color: rgba(0, 0, 0, 0.5);
+    
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 140%;
+
+}
+
+.word-badge:hover {
+    background-color: rgba(0, 0, 0, 0.03);
+    cursor: pointer;
+}
+
 .black-button{
     border-radius: 46px;
     width: 95px;
@@ -106,6 +128,24 @@
     justify-content: center;
 }
 
+.icon-box-small{
+    width: 16px;
+    height: 16px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon-box-large{
+    width: 40px;
+    height: 40px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .icon-button{
     border-radius: 50% 50%;
 
@@ -143,6 +183,14 @@
     background-image: url(assets/image/expand-right-light.png);
 }
 
+.expand-left-icon{
+    background-image: url(assets/image/expand-left.png);
+}
+
+.expand-right-icon{
+    background-image: url(assets/image/expand-right.png);
+}
+
 .logo-light-icon{
     background-image: url(assets/image/logo-light.png);
 }
@@ -166,6 +214,7 @@
 .check-round-fill-icon{
     background-image: url(assets/image/check-round-fill.png);
 }
+
 .check-ring-light-icon{
     background-image: url(assets/image/check-ring-light.png);
 }
@@ -176,6 +225,42 @@
 
 .close-icon {
     background-image: url(assets/image/close.png);
+}
+
+.more-icon {
+    background-image: url(assets/image/more.png);
+}
+
+.favorite-fill-icon {
+    background-image: url(assets/image/favorite-fill.png);
+}
+
+.favorite-light-icon {
+    background-image: url(assets/image/favorite-light.png);
+}
+
+.up-light-icon {
+    background-image: url(assets/image/expand-up-light.png);
+}
+
+.down-light-icon {
+    background-image: url(assets/image/expand-down-light.png);
+}
+
+.comment-icon {
+    background-image: url(assets/image/chat-light.png);
+}
+
+.edit-icon {
+    background-image: url(assets/image/edit-light.png);
+}
+
+.image-box-white-icon {
+    background-image: url(assets/image/image-box-white-light.png);
+}
+
+.arrow-right-icon {
+    background-image: url(assets/image/arrow-right.png);
 }
 
 .board-write-image-box {
@@ -192,3 +277,4 @@
     top: 20px;
     right: 20px;
 }
+
