--- a/board-front/src/views/Authentication/style.css
+++ b/board-front/src/views/Authentication/style.css
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
 
-    background-image: url(assets/auth-background.png);
+    background-image: url(assets/2.jpg);
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: auto;
